--- a/package.json
+++ b/package.json
@@ -50,9 +50,12 @@
     "remove-demo": "rimraf ./src/assets ./src/components ./src/pages ./src/Routes.js ./src/App.js ./src/index.css && npm run rename"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
     "gh-pages": "^3.2.3",
+    "postcss": "^8.4.5",
     "renamer": "^1.0.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "tailwindcss": "^3.0.12"
   },
   "browserslist": [
     ">0.2%",
