--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "simple-flexbox": "^2.3.2",
     "styled-components": "5.2.1",
     "toastify": "^2.0.1",
+    "tw-elements": "^1.0.0-alpha11",
     "use-react-router": "^1.0.7"
   },
   "scripts": {
