--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "mdb-react-ui-kit": "^1.3.0",
     "mdb-ui-kit": "^3.9.0",
     "mdbreact": "5.1.0",
-    "node-sass": "^4.14.1",
     "react-bootstrap": "^1.6.4",
     "react-css-dropdown": "^1.1.2",
     "react-dom": "^16.13.1",
@@ -36,6 +35,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
+    "sass": "^1.49.9",
     "simple-flexbox": "^2.3.2",
     "styled-components": "5.2.1",
     "toastify": "^2.0.1",
