--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sass": "^1.49.9",
     "simple-flexbox": "^2.3.2",
     "styled-components": "5.2.1",
+    "swiper": "^8.1.4",
     "toastify": "^2.0.1",
     "tw-elements": "^1.0.0-alpha11",
     "use-react-router": "^1.0.7"
